--- a/readme
+++ b/readme
@@ -1,3 +1,5 @@
 Hello, This is training on how to use git as a control version 
 in this training i learn how to use commands to do that.
 thanks so much to git and github they served the world so much.
+
+hello git and github
