add *jpg to ignore file

--- a/readme
+++ b/readme
@@ -1,2 +1,4 @@
 Hello, This is training on how to use git as a control version 
 in this training i learn how to use commands to do that.
+
+1-test git pull
